--- a/01/helloworld.html
+++ b/01/helloworld.html
@@ -1,19 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
-        <h2>Welcome to React</h2>
-        <div id="react-root1"></div>
-        <div id="react-root2"></div>
-        <div id="react-root3"></div>
-<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script src="simple1.js"></script>
-</body>
+  </head>
+  <body>
+    <h2>Welcome to React</h2>
+    <div id="react-root1"></div>
+    <div id="react-root2"></div>
+    <div id="react-root3"></div>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <!-- <script src="simple1.js"></script> -->
+    <script src="/src/02.js"></script>
+  </body>
 </html>
